2014-11-10  Eva Balazsfalvi  <evab.u-szeged@partner.samsung.com>

        [EFL] Fix the test font path after r175555.

        Reviewed by Csaba Osztrogonác.

        * WebKitTestRunner/PlatformEfl.cmake: Dependencies -> DependenciesEFL

2014-11-10  Akos Kiss  <akiss@inf.u-szeged.hu>

        Fix the exception fuzz helper to generate targets in the correct range
        https://bugs.webkit.org/show_bug.cgi?id=138544

        Reviewed by Filip Pizlo.

        Currently, the script generates exception fuzz targets in the range of
        0..($checkCount-1). However, target 0 is never hit, while target 1 is
        always outside of the outermost try block of the tests, which therefore
        prints unexpected output and results in false failures when fired at.
        Additionally, target $checkCount is never generated.

        This patch fixes the script to generate targets in the range of
        2..$checkCount.

        * Scripts/jsc-stress-test-helpers/js-exception-fuzz:

2014-11-09  Csaba Osztrogonác  <ossy@webkit.org>

        make-passwords-json.py should generarate everything needed for testing
        https://bugs.webkit.org/show_bug.cgi?id=138503

        Reviewed by Ryosuke Niwa.

        * BuildSlaveSupport/build.webkit.org-config/make_passwords_json.py:
        Renamed from make-passwords-json.py to be able included from mastercfg_unittest.py.
        Additionally generate auth.json, credentials.cfg and committers.cfg too.
        (create_mock_slave_passwords_dict): Moved from mastercfg_unittest.py
        * BuildSlaveSupport/build.webkit.org-config/mastercfg_unittest.py:
        (BuildBotConfigLoader._mock_open): Use make_passwords_json.create_mock_slave_passwords_dict() to avoid duplication.
        (BuildBotConfigLoader._create_mock_passwords_dict): Deleted.

2014-11-09  Carlos Garcia Campos  <cgarcia@igalia.com>

        [GTK] generate-gtkdoc should ignore invalid files
        https://bugs.webkit.org/show_bug.cgi?id=138542
