@@ -1,3 +1,9 @@
+2014-11-10  Conrad Shultz  <conrad_shultz@apple.com>
+
+        Unreviewed, moved myself to the list of committers.
+
+        * Scripts/webkitpy/common/config/contributors.json:
+
 2014-11-10  Eva Balazsfalvi  <evab.u-szeged@partner.samsung.com>
 
         [EFL] Fix the test font path after r175555.
